<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.example.androiddeveloper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/business_cover_image"
                android:scaleType="centerCrop"
                android:src="@drawable/business_cover_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/business_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_watch_later_black_24dp"
            android:gravity="center"
            android:text="@string/business_hours" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/business_information"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="24dp"
            android:autoLink="phone"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:text="@string/business_number"
            android:textColorLink="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_business_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_location_on_black_24dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:textSize="16sp"
            tools:text="@string/business_address" />

    </LinearLayout>

</ScrollView>
